feat(read): enhance Gita reading experience and navigation
- Add complete sample verses for first two chapters
- Implement next/previous verse navigation with chapter transitions
- Update translation key from 'read' to 'gita' for better clarity
- Add multilingual support for Gita section (English, Hindi, Sanskrit)
- Improve verse display with persistent translation/explanation toggles

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -23,7 +23,8 @@
     "error": "Error",
     "success": "Success",
     "loading": "Loading...",
-    "noResults": "No results found"
+    "noResults": "No results found",
+    "gita": "Gita"
   },
   "chat": {
     "greeting": "Namaste!",
