--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -23,7 +23,8 @@
     "error": "त्रुटि",
     "success": "सफल",
     "loading": "लोड हो रहा है...",
-    "noResults": "कोई परिणाम नहीं मिला"
+    "noResults": "कोई परिणाम नहीं मिला",
+    "gita": "गीता"
   },
   "chat": {
     "greeting": "नमस्ते!",
