--- a/src/i18n/locales/sa.json
+++ b/src/i18n/locales/sa.json
@@ -1,29 +1,30 @@
 {
   "common": {
-    "home": "मुख्यपृष्ठम्",
-    "askAI": "कृत्रिमबुद्धिं पृच्छतु",
+    "home": "गृहम्",
+    "askAI": "AI प्रश्नः",
     "verses": "श्लोकाः",
     "wisdom": "ज्ञानम्",
-    "saved": "सञ्चितम्",
-    "profile": "परिचयः",
-    "streaks": "निरन्तरता",
-    "settings": "व्यवस्थाः",
-    "darkMode": "रात्रिरूपम्",
+    "saved": "सुरक्षितम्",
+    "profile": "प्रोफाइल",
+    "streaks": "अनुक्रमः",
+    "settings": "सेटिंग्स",
+    "darkMode": "अंधकार मोड",
     "notifications": "सूचनाः",
-    "selectLanguage": "भाषां चिनोतु",
-    "back": "पूर्वम्",
-    "next": "अग्रिमम्",
-    "previous": "पूर्वम्",
+    "selectLanguage": "भाषा चुनें",
+    "back": "पृष्ठे",
+    "next": "अग्रिमः",
+    "previous": "पूर्वः",
     "readMore": "अधिकं पठतु",
-    "save": "रक्षतु",
-    "edit": "सम्पादयतु",
-    "delete": "विलोपयतु",
-    "cancel": "निरस्यतु",
-    "confirm": "स्वीकरोतु",
-    "error": "दोषः",
-    "success": "सफलम्",
-    "loading": "प्रतीक्षताम्...",
-    "noResults": "फलानि न प्राप्तानि"
+    "save": "सुरक्षितं कुरु",
+    "edit": "संशोधय",
+    "delete": "हन्",
+    "cancel": "रद्द",
+    "confirm": "पुष्टि",
+    "error": "त्रुटिः",
+    "success": "सफलता",
+    "loading": "लोड हो रहा है...",
+    "noResults": "कोई परिणाम नहीं मिला",
+    "gita": "गीता"
   },
   "chat": {
     "greeting": "नमस्ते!",
