--- a/src/i18n/locales/sa.json
+++ b/src/i18n/locales/sa.json
@@ -1,41 +1,42 @@
 {
   "common": {
     "home": "गृहम्",
-    "askAI": "AI प्रश्नः",
+    "askAI": "कृत्रिममेधां पृच्छतु",
     "verses": "श्लोकाः",
     "wisdom": "ज्ञानम्",
-    "saved": "सुरक्षितम्",
-    "profile": "प्रोफाइल",
-    "streaks": "अनुक्रमः",
-    "settings": "सेटिंग्स",
-    "darkMode": "अंधकार मोड",
+    "saved": "संग्रहितम्",
+    "profile": "व्यक्तिवृत्तम्",
+    "streaks": "अविच्छिन्नाभ्यासः",
+    "settings": "समायोजनानि",
+    "darkMode": "तमसोऽवस्था",
     "notifications": "सूचनाः",
-    "selectLanguage": "भाषा चुनें",
-    "back": "पृष्ठे",
-    "next": "अग्रिमः",
-    "previous": "पूर्वः",
+    "selectLanguage": "भाषां चिनोतु",
+    "back": "पुनरागच्छतु",
+    "next": "अग्रिमम्",
+    "previous": "पूर्वम्",
     "readMore": "अधिकं पठतु",
-    "save": "सुरक्षितं कुरु",
-    "edit": "संशोधय",
-    "delete": "हन्",
-    "cancel": "रद्द",
-    "confirm": "पुष्टि",
+    "save": "संग्रहयतु",
+    "edit": "संपादयतु",
+    "delete": "विलोपयतु",
+    "cancel": "निरस्यतु",
+    "confirm": "पुष्टीकरोतु",
     "error": "त्रुटिः",
-    "success": "सफलता",
-    "loading": "लोड हो रहा है...",
-    "noResults": "कोई परिणाम नहीं मिला",
-    "gita": "गीता"
+    "success": "सफलम्",
+    "loading": "प्रतीक्षताम्...",
+    "noResults": "न किमपि फलं प्राप्तम्",
+    "gita": "गीता",
+    "copiedToClipboard": "फलके प्रतिलिपिः कृता"
   },
   "chat": {
     "greeting": "नमस्ते!",
-    "welcomeMessage": "हिन्दुज्ञानाध्यात्मविषये किमपि पृच्छतु।",
-    "description": "अहं भगवद्गीतादिपवित्रग्रन्थेभ्यः ज्ञानं प्रदातुं सहायकः भवामि।",
+    "welcomeMessage": "हिन्दूज्ञानविषये आध्यात्मिकविषये च किमपि पृच्छतु।",
+    "description": "भगवद्गीतायाः अन्येषां पवित्रग्रन्थानां च अन्तर्दृष्टिः प्रदातुं सहायिष्यामि।",
     "placeholder": "हिन्दुज्ञानविषये पृच्छतु..."
   },
   "verses": {
     "title": "पवित्रश्लोकाः",
     "categories": {
-      "all": "सर्वम्",
+      "all": "सर्वे",
       "karma": "कर्म",
       "yoga": "योगः",
       "bhakti": "भक्तिः",
@@ -44,10 +45,18 @@
       "wisdom": "ज्ञानम्"
     },
     "chapterVerse": "अध्यायः {{chapter}}, श्लोकः {{verse}}",
-    "search": "श्लोकान् अन्विष्यतु...",
+    "search": "श्लोकान् अन्वेषतु...",
     "bookmark": "चिह्नयतु",
     "unbookmark": "चिह्नं निष्कासयतु",
-    "share": "विभजतु"
+    "share": "श्लोकं विभजतु",
+    "verseOfTheDay": "अद्यतनश्लोकः",
+    "daily": "दैनिकम्",
+    "savedToast": "श्लोकः संग्रहितः",
+    "savedDescription": "भवान् एतं श्लोकं स्वसंग्रहितेषु प्राप्तुं शक्नोति",
+    "unsavedToast": "श्लोकः संग्रहितेभ्यः निष्कासितः", 
+    "unsavedDescription": "श्लोकः भवतः संग्रहितेभ्यः निष्कासितः",
+    "verseCopied": "श्लोकः भवतः फलके प्रतिलिपिकृतः",
+    "bhagavadGita": "भगवद्गीता"
   },
   "wisdom": {
     "title": "दिव्यज्ञानम्",
@@ -77,5 +86,16 @@
     "seeker": "जिज्ञासुः",
     "devoted": "समर्पितः",
     "scholar": "विद्वान्"
+  },
+  "menu": {
+    "explore": "अन्वेषणम्",
+    "recentActivity": "सद्यः कार्याणि",
+    "account": "लेखा",
+    "language": "भाषा",
+    "newItems": "{{count}} नवीनम्",
+    "recentVerse": "अध्यायः {{chapter}}, श्लोकः {{verse}}",
+    "savedItem": "संग्रहितम्: {{item}}",
+    "karmaYoga": "कर्मयोगः",
+    "daysCount": "{{count}} दिनानि"
   }
 } 
